refactor: remove `jpa` middle name from all services
also clean a few warnings raised by intellij
redundant throws clauses and javadoc
redundant null checks (use apache commons StringUtils)